--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,104 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+nav {
+    height: 80px;
+    display: flex;
+
+}
+
+img {
+    width: 100%;
+}
+
+.nav__container {
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    padding: 0 24px;
+    justify-content: space-between;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.purple {
+    color:#7342d6;
+}
+.logo {
+    width: 160px;
+}
+ul {
+    display: flex;
+}
+
+li {
+    list-style-type: none;
+}
+
+.nav__link {
+    margin-left: 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #7342d6;
+    font-weight: bold;
+    padding: 8px;
+}
+
+.nav__link:hover {
+    text-decoration: underline;
+}
+
+.nav__link--primary { 
+    border: 2px solid #7342d6;
+    border-radius: 4px;
+}
+
+.nav__link--primary:hover {
+    text-decoration: none;
+}
+
+#landing {
+    background-color: rgba(115, 66, 214, .1);
+}
+
+header {
+    height: calc(100vh - 80px);
+}
+
+.header__container{ 
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+h1 {
+    font-size: 56px;
+    color: #7342d6;
+    margin-bottom: 24px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+button {
+    cursor: pointer;
+}
+
+.btn {
+    background-color: #7342d6;
+    color: #fff;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: none;
+}
