--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ nav {
 
 img {
     width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px;
 }
 
 .nav__container {
@@ -79,9 +82,15 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-top: 20px;
 
 }
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
 h1 {
     font-size: 56px;
     color: #7342d6;
@@ -99,6 +108,10 @@ button {
     cursor: pointer;
 }
 
+button:active {
+    transform:translateY(1px)
+}
+
 .btn {
     background-color: #7342d6;
     color: #fff;
@@ -106,4 +119,56 @@ button {
     font-size: 20px;
     border-radius: 4px;
     border: none;
+}
+
+.header__image-wrapper {
+    padding: 20px;
+}
+
+.container {
+    padding: 56px 0;
+
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+/* HIGHLIGHTS */
+
+.highlight__wrapper {
+    display: flex;
+}
+
+.highlight {
+    padding: 0 24px;
+    width: scale(100% / 3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.highlight__para { 
+    text-align: center;
+}
+
+.highlight__img {
+    border: 2px solid #7342d682;
+    color: #7342d6;
+    height: 100px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom: 16px;
+}
+
+.highlight__subtitle {
+font-size: 20px;
+margin-bottom: 16px;
+
 }
