--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -17,7 +22,11 @@ img {
     width: 100%;
     height: 100%;
     max-height: 50vh;
-    padding: 20px;
+    /* padding: 20px; */
+}
+
+p {
+    line-height: 1.5;
 }
 
 .nav__container {
@@ -123,6 +132,7 @@ button:active {
 
 .header__image-wrapper {
     padding: 20px;
+    z-index: 2;
 }
 
 .container {
@@ -136,6 +146,34 @@ button:active {
     margin: 0 auto;
 }
 /* HIGHLIGHTS */
+
+#highlights {
+    position: relative;
+}
+
+
+#highlights:before,
+#highlights:after {
+    background: url('/assets/wave.svg');
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#highlights:before {
+    transform: translateY(-100%);
+    top: 1px;
+}
+
+#highlights::after {
+    transform: translateY(100%) rotate(180deg);
+    bottom: 1px;
+}
 
 .highlight__wrapper {
     display: flex;
@@ -152,6 +190,7 @@ button:active {
 
 .highlight__para { 
     text-align: center;
+    max-width: 280px;
 }
 
 .highlight__img {
@@ -170,5 +209,36 @@ button:active {
 .highlight__subtitle {
 font-size: 20px;
 margin-bottom: 16px;
+}
 
+/* FEATURES */
+
+#features {
+    padding-top: 8vw;
+    background-color: rgba(115, 66, 214, .1);
+}
+
+.books {
+    display: flex;
+}
+
+.book {
+    width: 25%;
+    padding: 24px;
+}
+.book__img {
+    max-height: 240px;
+    transition: all 300ms ease;
+    cursor: no-drop;
+}
+
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img{
+    transform: scale(1.03);
 }
