--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -27,6 +31,14 @@ img {
 
 p {
     line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav__container {
@@ -220,6 +232,7 @@ margin-bottom: 16px;
 
 .books {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .book {
@@ -241,4 +254,74 @@ margin-bottom: 16px;
 
 .book:hover .book__img{
     transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 8px;
+    color: #bfbfbf;
+}
+
+/* EXPLORE MORE */
+
+#explore__more {
+    background-color: rgba(115, 66, 214, .1);
+}
+
+.btn__wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+/* FOOTER */
+
+.no-cursor {
+    cursor: not-allowed;
+}
+
+footer {
+    background-color: #242424;
+
+}
+
+.footer__logo {
+    display: flex;
+}
+.footer__logo-img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__link,
+.footer__copyright {
+    color: #fff;
+}
+
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__list {
+    margin: 16px 0;
+}
+
+.footer__link {
+    padding: 8px;
 }
